<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAlphaPrimaryLight"
    >

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/view_toolbar"
        />

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_main_text"
        android:textColor="#000"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_auth_by_vk"
        style="@style/Widget.TextView.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:text="@string/auth_by_vk"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/btn_why_should_auth"
        />

    <Button
        android:id="@+id/btn_why_should_auth"
        style="@style/MaterialButton.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/login_why_should_auth"
        android:textAllCaps="false"
        android:textColor="@color/colorDisabled"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/pb_auth_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:visibility="visible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>