<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_mutual_friends_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mutual_friends_illustration"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        app:endIconDrawable="@drawable/ic_group_add"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mutual_friends_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_user_title"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_first_user_name"
        style="@style/Widget.TextView.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorDisabled"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/til_first_user"
        app:layout_constraintTop_toBottomOf="@+id/til_first_user"

        tools:text="Имя Фамилия"
        tools:visibility="visible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_second_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        app:endIconDrawable="@drawable/ic_group_add"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_first_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_second_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_user_title"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_second_user_name"
        style="@style/Widget.TextView.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorDisabled"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/til_second_user"
        app:layout_constraintTop_toBottomOf="@+id/til_second_user"
        tools:text="Имя Фамилия"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btn_find_friends"
        style="@style/MaterialButton.Montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>