<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"

        android:src="@drawable/ic_spy"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/login_main_text"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"

        app:layout_constraintBottom_toTopOf="@+id/tv_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_support"
        style="@style/Widget.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:drawableStart="@drawable/icon_support"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/settings_ask_support"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@+id/view_support"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/view_support"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorAccent"

        app:layout_constraintBottom_toTopOf="@+id/tv_share_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_share_app"
        style="@style/Widget.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:drawableStart="@drawable/icon_share"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="20dp"
        android:text="@string/settings_share_app"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@+id/view_border_share"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/view_border_share"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorAccent"

        app:layout_constraintBottom_toTopOf="@+id/tv_app_version_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_app_version_title"
        style="@style/Widget.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:drawableStart="@drawable/icon_version"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="Версия приложения: 1.0.0"
        />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_version_title"
        />
</androidx.constraintlayout.widget.ConstraintLayout>